kubernetes-deployment/app-deployment/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: tan-app
  annotations:
    net.beta.kubernetes.io/network-policy: |
      {
        "ingress": {
          "isolation": "DefaultDeny"
      }}
