kubernetes-deployment/app-deployment/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-leave-app
  namespace: tan-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: leave.com
    http:
      paths:
      - path: /
        backend:
          serviceName: leave-nginx-deployment
          servicePort: 80
#minikube addons enable ingress
#https://medium.com/@Oskarr3/setting-up-ingress-on-minikube-6ae825e98f82
